--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     box-sizing: border-box;
     font-family: 'Titan One', sans-serif;
 font-family: 'Titillium Web', sans-serif;
+    background-color: black;
 
 }
 
